style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    background-color: #F6F8F9;
    font-family: 'Roboto', sans-serif;
    color: #444950;
}

/*--------------- 
    APP HEADER 
-----------------*/

.app-logo{
    vertical-align: middle;
}

.app-title{
    display: inline-block;
    vertical-align: middle;
}

header{
    padding: 10px 20px;
}

/*--------------- 
    APP BODY 
-----------------*/

.container{
    max-width: 800px;
    margin: 0 auto;
    padding: 1% 3%;

}
    /* navigation bar */

    .task-button{
    color: white;
    background-color: #47ADF2;
    border: none;
    height: 30px;
    width: 70px;
    border-radius: 5px;
    font-family: 'Roboto', sans-serif;
    transition-duration: 0.4s;
    cursor: pointer;
}

.selection-button{
    color: #C5CBD0;
    background-color: white;
    border: none;
    height: 30px;
    width: 85px;
    border-radius: 5px;
    font-family: 'Roboto', sans-serif;
    cursor: pointer;
}
.task-button:hover {
    background-color: white;
    color: #47ADF2;
}

.selection-button:hover {
    background-color: #C5CBD0;
    color: black;
}

    /* /navigation bar */

h4{
    color: #444950;
    margin-top: 15px;
}

     /* circles style */
.circle {
    display: inline-block;
    border: 1px solid black;
    height: 15px;
    width: 15px;
    border-radius: 100%;
    text-align: center;
    line-height: 15px;
    font-size: 10px;
    vertical-align: middle;
}

.circle-done {
    border: 1px solid #65C0A9;
    color: #65C0A9;
}

.circle-todo {
    border: 1px solid #EA4237;
    color: #EA4237;
}

   /* tag style */

   .tag {
    display: inline-block;
    padding: 6px 10px;
    border: none;
    border-radius: 15px;
    color: white;
   }

   .editorial{
    background-color: #45ABEA;
   }

   .q1goals{
    background-color: #9C72E4;
   }

   .recruiting{
    background-color: #65C0A9;
   }

   .mobile{
    background-color: #F29D33;
   }

   .website{
    background-color:#D963A1;
   }

   .sales{
    background-color: #B0C926;
   }

   .spacing {
    display: inline-block;
    margin-top: 10px;
    margin-bottom: 10px;
   }

   .lessspacing{
    display: inline-block;
    margin-top: 8px;
    margin-bottom: 10px;
    vertical-align: middle;
   }

   .notag {
    display: inline-block;
    margin-top: 12px;
    margin-bottom: 10px;
    vertical-align: middle;
   }

